[gd_scene load_steps=2 format=3 uid="uid://gene_dictionary_overlay"]

[ext_resource type="Script" path="res://scripts/overlays/gene_dictionary_overlay.gd" id="1_c29ft"]

[node name="GeneDictionaryOverlay" type="CanvasLayer"]
script = ExtResource("1_c29ft")
layer = 10

[node name="Dimmer" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.4)
mouse_filter = 2
visible = false

[node name="Panel" type="Panel" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.16
anchor_top = 0.14
anchor_right = 0.84
anchor_bottom = 0.86
mouse_filter = 1
visible = false

[node name="Margin" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_top = 24
theme_override_constants/margin_bottom = 24
theme_override_constants/margin_left = 32
theme_override_constants/margin_right = 32

[node name="VBox" type="VBoxContainer" parent="Panel/Margin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="Panel/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Gene Dictionary"
horizontal_alignment = 1
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.96, 0.98, 1, 1)

[node name="Scroll" type="ScrollContainer" parent="Panel/Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Content" type="RichTextLabel" parent="Panel/Margin/VBox/Scroll"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
fit_content = true
scroll_following = false
text = ""
mouse_filter = 2
autowrap_mode = 1
theme_override_colors/default_color = Color(0.96, 0.98, 1, 1)

[node name="CloseButton" type="Button" parent="Panel/Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Close"
size_flags_horizontal = 4

[node name="InputCatcher" type="Control" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
visible = false
